# workout-template

./: .gitignore  .replit  README.md  crowdin.yml  main.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  workout-challenge.md  workout_challenge.md
.github/workflows/: cd-gh-pages.yml  deploy-github-pages.yml  unittests.yml
.lesson/: instructions.md  lessonplan.md
docs/: conf.py  index.md  index.txt
