[tool.poetry]
name = "todo-provide-assignment-name"
version = "0.1.0"
description = "todo: provide assignment description"
authors = ["Author Name <authorl@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
